--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -6,12 +6,14 @@ body {
   padding-left: 0px !important;
   padding-right: 0px !important;
 }
+
 .nav {
   background: black;
   position: fixed;
   top: 0px;
   width: 100%;
 }
+
 .nav-pills {
   background: black;
 }
@@ -19,15 +21,16 @@ body {
 .nav-link {
   color: white;
 }
+
 .btn {
   color: black;
 }
 
-.fa-github{
+.fa-github {
   color: #b36b00;
 }
 
-.fa-twitter{
+.fa-twitter {
   color: #0066ff;
 }
 
@@ -49,6 +52,7 @@ body {
   -moz-transition: background 0.3s ease-in-out;
   transition: background 0.3s ease-in-out;
 }
+
 .btn-circle:hover,
 .btn-circle:focus {
   outline: none;
@@ -62,75 +66,83 @@ h1 {
   font-size: 8vw;
   font-family: 'Lobster', sans-serif;
   width: 50%;
-  margin-right:auto;
-  margin-left:auto;
-  border-radius:3%;
+  margin-right: auto;
+  margin-left: auto;
+  border-radius: 3%;
   color: #fff;
 }
+
 h2 {
   padding: 10px;
   margin: 0px;
   font-size: 3vw;
   font-family: 'Lobster', sans-serif;
   width: 40%;
-  margin-right:auto;
-  margin-left:auto;
-  border-radius:3%;
+  margin-right: auto;
+  margin-left: auto;
+  border-radius: 3%;
   color: #fff;
 }
+
 h3 {
   padding: 10px;
   margin: 0px;
   font-size: 1.75vw;
-  letter-spacing:1px;
+  letter-spacing: 1px;
   font-family: 'Open Sans Condensed', sans-serif;
   width: 70%;
-  margin-right:auto;
-  margin-left:auto;
-  border-radius:3%;
+  margin-right: auto;
+  margin-left: auto;
+  border-radius: 3%;
   color: #fff;
   line-height: 180%;
 }
+
 .btn {
   background: rgba(82, 82, 122, 0.4);
 }
 
 .portfolio {
-    width: 290px;
-    height: 150px;
-    border: 5px;
-    border-color: white;
-    padding: 7px;
-
+  width: 290px;
+  height: 150px;
+  border: 5px;
+  border-color: white;
+  padding: 7px;
 }
 
-.pageOne{
+.pageOne {
   background: url("https://hd.unsplash.com/photo-1442876906995-6761040d1f0b");
   background-size: cover;
   height: 700px;
 }
-.pageTwo{
+
+.pageTwo {
   background: url("https://hd.unsplash.com/photo-1421930535025-d2af27c14065");
   background-size: cover;
   height: 700px;
 }
-.pageThree{
+
+.pageThree {
   background: url("https://hd.unsplash.com/photo-1445953993297-28dff00088f3");
   background-size: cover;
   height: 790px;
 }
-.pageFour{
+
+.pageFour {
   background: url("https://hd.unsplash.com/photo-1445953993297-28dff00088f3");
   background-size: cover;
   height: 700px;
 }
+
 .thumbnail {
-  width:340px;
-  height:190px;
-  font-size:10px;
+  font-size: 10px;
 }
 
 .port_img {
-  width:250px;
-  height:119px;
+  width: 70%;
+  height: 70%;
+}
+
+h4 {
+  font-size: 1em;
 }
